# Mac_Cleaner

./: CMakeLists.txt  README.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.3.0.md
assets/: AppIcon.icns
cpp/include/: cleaner.hpp
cpp/src/: cleaner.cpp  main.cpp
native/: macos_reopen_hook.m  macos_status_item.m
native/menubar_appkit/: AppSupport.swift  MenuBarPanel.swift  SystemSamplers.swift  main.swift
packaging/: macos_cleaner.spec  macos_cleaner_menu.spec
python/: app.py  application_manager.py  bridge.py  dashboard_manager.py  disk_manager.py  gui.py  image_manager.py  memory_manager.py  overview_manager.py  permission_manager.py  settings_manager.py  startup_manager.py  task_support.py  tray_ipc.py
python/desktop_app/: __init__.py  main.py  task_runner.py  window.py
python/tray_helper/: main.py
python/webui/: app.js  index.html  style.css
scripts/: build_desktop_launcher.sh  build_shareable_app.sh  desktop_theme_smoke.py
